# largest_palindrome_function

./: CMakeLists.txt  main.cpp  sturkturno_nizi.cpp
AV/Av1/: 1.cpp
av7/: av7.1.cpp  av7.2.cpp
finki/: labs5.cpp
labs/lab5/: lab_5.2.cpp  labs5.cpp
